setup placeholder Tomagotchi, took notes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+
+	<div class="tomagotchi"></div>
+
+
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
