--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tomagotchi Project</title>
+	<title>Tamagotchi Project</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js">
 </head>
 <body>
+	<div id="gameWindow">
+		<header id="infoBox">
+			<nav class="gameInfo">
+				<span class="timer"></span>
+				<span class="age"></span>
+			</nav>
+		</header>
+		<main id="tamagotchiTank">
 
-
-	<div class="tomagotchi"></div>
-
-
+			<div class="tamagotchi">&nbsp;</div>
+		
+		</main>
+	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
