--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="gameWindow">
 		<header id="infoBox">
+			<h2 class="title">TAMAGOTCHI</h2>
 			<nav class="gameInfo">
 				<span class="timer"></span>
 				<span class="age"></span>
@@ -18,6 +19,9 @@
 			<div class="tamagotchi">&nbsp;</div>
 		
 		</main>
+		<footer class="buttons">
+			<button class="begin">New Tamagotchi</button>
+		</footer>	
 	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
