--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tamagotchi Project</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script> 
 </head>
 <body>
 	<div id="gameWindow">
@@ -20,7 +20,7 @@
 		
 		</main>
 		<footer class="buttons">
-			<button class="begin">New Tamagotchi</button>
+			<button id="begin">New Tamagotchi</button>
 		</footer>	
 	</div>
 	<script type="text/javascript" src="js/app.js"></script>
