added functionality to make tamagotchi button to add to instantiation of original tamagotchi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</header>
 		<main id="tamagotchiTank">
 
-			<div class="tamagotchi">&nbsp;</div>
+			<div class="tamagotchi"></div>
 		
 		</main>
 		<footer class="buttons">
