added hide and show elements for instantiating tamagotchi

--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 <body>
 	<div id="gameWindow">
 		<header id="infoBox">
-			<h3 class="title">TAMAGOTCHI</h3>
+			<h3 class="title">NEW TAMAGOTCHI?</h3>
 			<form class="nameTama">
 				<input type="text" placeholder="name your tamagotchi" id="nameTamaInput"/>
 				<input type="submit"></form>
 			</form>
 			<nav class="gameInfo">
-				<span class="timer">Time:</span>
-				<span class="age">Age:</span>
-				<span class="hunger">Hunger:</span>
-				<span class="boredom">Boredom:</span>
+				<span class="timer">Time: 0</span>
+				<span class="age">Age: 0</span>
+				<span class="hunger">Hunger: 0</span>
+				<span class="boredom">Boredom: 0</span>
 			</nav>
 		</header>
 		<main id="tamagotchiTank">
 
 			<div class="tamagotchi"></div>
+
+			<!-- empty space in a div value - &nbsp; -->
 		
 		</main>
 		<footer class="buttons">
