name input logs as new tamagotchi name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="gameWindow">
 		<header id="infoBox">
-			<h3 class="title">NEW TAMAGOTCHI?</h3>
+			<h3 class="title">CREATE A NEW TAMAGOTCHI?</h3>
 			<form class="nameTama">
 				<input type="text" placeholder="name your tamagotchi" id="nameTamaInput"/>
 				<input type="submit"></form>
