got my timer working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<input type="submit"></form>
 			</form>
 			<nav class="gameInfo">
-				<span class="timer">Time: 0</span>
+				<span id="timer">Time: 0</span>
 				<span class="age">Age: 0</span>
 				<span class="hunger">Hunger: 0</span>
 				<span class="boredom">Boredom: 0</span>
@@ -22,7 +22,7 @@
 		</header>
 		<main id="tamagotchiTank">
 
-			<div class="tamagotchi"></div>
+			<div class="tamagotchi">o o<br></br>_</div>
 
 			<!-- empty space in a div value - &nbsp; -->
 		
