--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Tamagotchi Project</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet"> 
 </head>
 <body>
 	<div id="gameWindow">
