improved face of tamagotchi

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 		</header>
 		<main id="tamagotchiTank">
 
-			<div class="tamagotchi">o o<br></br>_</div>
+			<div class="tamagotchi">
+				<div class="eyes">o o</div>
+				<div class="mouth">_</div>
+
+			</div>
 
 			<!-- empty space in a div value - &nbsp; -->
 		
