interval timer is increasing age, boredom, sleepy, and hunger.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 				<input type="submit"></form>
 			</form>
 			<nav class="gameInfo">
-				<span id="timer">Time: 0</span>
-				<span class="age">Age: 0</span>
-				<span class="hunger">Hunger: 0</span>
-				<span class="boredom">Boredom: 0</span>
+				<span id="sleepy">Sleepy: 0</span>
+				<span id="age">Age: 0</span>
+				<span id="hunger">Hunger: 0</span>
+				<span id="boredom">Boredom: 0</span>
 			</nav>
 		</header>
 		<main id="tamagotchiTank">
 
 			<div class="tamagotchi">
 				<div class="eyes">o o</div>
-				<div class="mouth">_</div>
+				<div class="mouth">≈</div>
 
 			</div>
 
