lights on and lights off buttons working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</header>
 		<main id="tamagotchiTank">
 
-			<div class="tamagotchi">
+			<div id="tamagotchi">
 				<div class="eyes">o o</div>
 				<div class="mouth">≈</div>
 
@@ -36,6 +36,7 @@
 			<button id="begin">New Tamagotchi</button>
 			<button id="feed">Feed</button>
 			<button id="sleep">Light's out!</button>
+			<button id="wakeUp">Light's on!</button>
 			<button id="play">Play</button>
 		</footer>	
 	</div>
