--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<div id="tamagotchi">
 				<div class="eyes">o o</div>
-				<div class="mouth">≈</div>
+				<div class="mouth">)</div>
 
 			</div>
 
