finished hunger button mechanism

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 			<div id="tamagotchi">
 				<div class="eyes">o o</div>
 				<div class="mouth">)</div>
-
 			</div>
-
+			<div id="food"></div>
 			<!-- empty space in a div value - &nbsp; -->
 		
 		</main>
