--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 		<main id="tamagotchiTank">
 
 			<div id="tamagotchi">
-				<div class="eyes">o o</div>
-				<div class="mouth">)</div>
+				<div id="eyes">o o</div>
+				<div id="mouth">)</div>
 			</div>
 			<div id="food"></div>
+
 			<!-- empty space in a div value - &nbsp; -->
 		
 		</main>
