--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 			<button id="sleep">Light's out!</button>
 			<button id="wakeUp">Light's on!</button>
 			<button id="play">Play</button>
-		</footer>	
+		</footer>
+		<div id="heDed"><h2>OH NO! TAMAGOTCHI IS DED!</h2></div>	
 	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
