--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<button id="wakeUp">Light's on!</button>
 			<button id="play">Play</button>
 		</footer>
-		<div id="heDed"><h2>OH NO! TAMAGOTCHI IS DED!</h2></div>	
+		<div id="heDed"><h2></h2></div>	
 	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
